[tool.poetry]
name = "US Treasury Rates"
version = "0.0.2"
description = "Help me"
authors = ["Me", "Myself", "I"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
  {include = "src"},
]

[tool.poetry.dependencies]
pandas = "^1.3.0"